NE1441-RHEL9-ROUTER/demo/route-sha1.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-sha1
spec:
  port:
    targetPort: 8676
  to:
    kind: Service
    name: route-sha1
  tls:
    termination: edge
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIDTDCCArWgAwIBAgIURw1MfWj82/P18Xd+2G9DsEZvzFEwDQYJKoZIhvcNAQEF
[...]
      0jVc8z5OtP0XQMbdoW5tCv/F+0CPp30GhrjSV/Qx7+s=
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIICdwIBADANBgkqhkiG9w0BAQEFAASCAmEwggJdAgEAAoGBANoBEgn+H9EPdYep
[...]
      4ITs/JJwQHEBoPw=
      -----END PRIVATE KEY-----
